--- a/app/src/main/res/layout/fragment_amount.xml
+++ b/app/src/main/res/layout/fragment_amount.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/amount_layout_height_220dp"
+    android:id="@+id/fragment_amount"
     android:background="@color/color_TitleBackground06"
     tools:context=".AmountFragment">
 
