--- a/app/src/main/res/layout/fragment_drinks_tea.xml
+++ b/app/src/main/res/layout/fragment_drinks_tea.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_drinks_tea"
     android:background="@color/color_FragmentBackground01"
     tools:context=".DrinksTeaFragment"
     tools:layout_editor_absoluteY="81dp">
