--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:name="tw.org.iii.pos.AmountFragment"
         android:layout_width="0dp"
         android:layout_height="@dimen/amount_layout_height_220dp"
+        tools:layout="@layout/fragment_amount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +57,7 @@
         android:name="tw.org.iii.pos.DisplayFragment"
         android:layout_width="@dimen/fragmentDisplay_width"
         android:layout_height="0dp"
+        tools:layout="@layout/fragment_display"
         app:layout_constraintBottom_toTopOf="@+id/fragmentAmount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/viewPager_Drinks"
