加入介面...純茶類傳直OK...NEXT : 奶茶類傳直

--- a/app/src/main/res/layout/fragment_amount.xml
+++ b/app/src/main/res/layout/fragment_amount.xml
@@ -35,6 +35,7 @@
         android:inputType="textPersonName"
         android:textSize="@dimen/textSize15sp"
         android:textAlignment="textEnd"
+        android:textColor="@color/color_EditText_Text"
         app:layout_constraintBottom_toBottomOf="@id/textView_select_commodity_name"
         app:layout_constraintEnd_toStartOf="@id/radioGroup_SugarContent"
         app:layout_constraintStart_toEndOf="@id/textView_select_commodity_name"
@@ -67,6 +68,7 @@
         android:inputType="textPersonName"
         android:textSize="@dimen/textSize15sp"
         android:textAlignment="textEnd"
+        android:textColor="@color/color_EditText_Text"
         app:layout_constraintBottom_toBottomOf="@id/textView_select_commodity_price"
         app:layout_constraintEnd_toStartOf="@id/radioGroup_SugarContent"
         app:layout_constraintStart_toEndOf="@id/textView_select_commodity_price"
@@ -99,6 +101,7 @@
         android:inputType="textPersonName"
         android:textSize="@dimen/textSize15sp"
         android:textAlignment="textEnd"
+        android:textColor="@color/color_EditText_Text"
         app:layout_constraintBottom_toBottomOf="@id/textView_select_commodity_quantity"
         app:layout_constraintEnd_toStartOf="@id/radioGroup_SugarContent"
         app:layout_constraintStart_toEndOf="@id/textView_select_commodity_quantity"
