--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -78,6 +78,8 @@
         android:inputType="number"
         android:enabled="false"
         android:textSize="@dimen/textSize15sp"
+        android:textAlignment="textEnd"
+        android:textColor="@color/color_EditText_Text"
         app:layout_constraintBottom_toBottomOf="@+id/textView_TotalAmount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -93,6 +95,7 @@
         android:enabled="false"
         android:textSize="@dimen/textSize15sp"
         android:textAlignment="textEnd"
+        android:textColor="@color/color_EditText_Text"
         app:layout_constraintBottom_toBottomOf="@+id/textView_Pay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -108,6 +111,7 @@
         android:enabled="false"
         android:textSize="@dimen/textSize15sp"
         android:textAlignment="textEnd"
+        android:textColor="@color/color_EditText_Text"
         app:layout_constraintBottom_toBottomOf="@+id/textView_Change"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
